Provides fs syscalls, Creates command line invocation of FS security demo
Provides open, read, write, close, and allowance changing syscalls for the filesystem
Respond to a read_file command to the command line.
Check security of files on open and permit changes to process permissions within the process.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-OBJECTS=kernelcore.o main.o console.o $(MEMORY_OBJS) keyboard.o clock.o interrupt.o pic.o ata.o string.o graphics.o font.o syscall.o syscall_handler.o process.o mutex.o list.o pagetable.o rtc.o disk.o math.o window.o cmd_line.o $(TEST_OBJS) iso.o fs_terminal_commands.o
+OBJECTS=kernelcore.o main.o console.o $(MEMORY_OBJS) keyboard.o clock.o interrupt.o pic.o ata.o string.o graphics.o font.o fs_sys.o syscall.o syscall_handler.o process.o mutex.o list.o pagetable.o rtc.o disk.o math.o window.o cmd_line.o $(TEST_OBJS) iso.o fs_terminal_commands.o
 OBJECTS+=$(DEBUG_OBJS)
 OBJECTS+=$(MOUSE_OBJS)
 
@@ -28,6 +28,12 @@ bootblock: bootblock.o
 
 kernel: ${OBJECTS}
 	ld ${KERNEL_LDFLAGS} -Ttext 0x10000 -s --oformat binary ${OBJECTS} -o $@
+
+test_iso.iso: read_file
+	mkdir ./test_iso && mv ./read_file ./test_iso/read_file && cp ./gettysbu.txt ./test_iso/gettysbu.txt && genisoimage -o ../test_iso.iso ./test_iso/ && rm -r ./test_iso
+
+read_file: read_file.o syscall.h syscall.o
+	ld ${KERNEL_LDFLAGS} -Ttext 0x80000000 -s --oformat binary read_file.o syscall.o -o $@
 
 %.o: %.c
 	gcc ${KERNEL_CCFLAGS} $< -o $@
